# rust

./: README.md
Cours/01_Introduction/: README.md
Cours/02_Variables/: README.md
Cours/03_Types/: README.md
Cours/04_functions/: README.md
Projets/06_pcpd/pcpd/: Cargo.toml
Projets/06_pcpd/pcpd/data/asian/: asian.json  asian_expected_hedge.json  asian_expected_price.json  asian_market.txt
Projets/06_pcpd/pcpd/data/basket/basket_2d/: basket_2d.json  basket_2d_expected_hedge.json  basket_2d_expected_price.json  basket_2d_market.txt
Projets/06_pcpd/pcpd/data/basket/basket_40d/: basket_40d.json  basket_40d_expected_hedge.json  basket_40d_expected_price.json  basket_40d_market.txt
Projets/06_pcpd/pcpd/data/basket/basket_5d/: basket_5d.json  basket_5d_expected_hedge.json  basket_5d_expected_price.json  basket_5d_market.txt
Projets/06_pcpd/pcpd/data/basket/basket_5d_1/: basket_5d_1.json  basket_5d_1_expected_hedge.json  basket_5d_1_expected_price.json  basket_5d_1_market.txt
Projets/06_pcpd/pcpd/data/call/: call.json  call_expected_hedge.json  call_expected_price.json  call_market.txt
Projets/06_pcpd/pcpd/data/perf/: perf.json  perf_expected_hedge.json  perf_expected_price.json  perf_market.txt
Projets/06_pcpd/pcpd/ressources/conception/: conception.puml
Projets/06_pcpd/pcpd/src/: lib.rs  main.rs
Projets/06_pcpd/pcpd/src/math/: random.rs
Projets/06_pcpd/pcpd/src/model/: black_scholes.rs  mod.rs
Projets/06_pcpd/pcpd/src/options/: asian.rs  basket.rs  call.rs  mod.rs  option.rs  put.rs
Projets/06_pcpd/pcpd/tests/: test_options.rs
(+61 files in other folders)
