
[package]
name = "pcpd"
version = "0.1.0"
edition = "2024"

[dependencies]

# for simulation of random variables : 
rand = "0.9.2"
rand_distr = "0.5.1"

# for parallelism
rayon = "1.10"

# for linear algebra : 
# nalgebra = { version = "0.34.0", features = ["serde-serialize"] }
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-linalg = { version = "0.17.0", features = ["openblas"] } # ou "intel-mkl" si tu veux MKL


# for serilaization : 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# for parsing CLI : 
clap = { version = "4.5", features = ["derive"] }


thiserror = "2.0.16"
approx = "0.5"

# [dev-dependencies]
# criterion = "0.7.0"

# [[bench]]
# name = "mc_pricer"
# harness = false

